# stg-ashland-core-backend

./: .gitignore  Cargo.toml  README.md  metadata.json
app/applet/: package.json
crates/stg-api/: Cargo.toml
crates/stg-api/src/: lib.rs
crates/stg-api/src/grpc/: auth.rs  error.rs  handlers.rs  mod.rs
crates/stg-application/: Cargo.toml
crates/stg-application/src/: lib.rs
crates/stg-domain/: Cargo.toml
crates/stg-domain/src/: lib.rs
crates/stg-infrastructure/: Cargo.toml
crates/stg-infrastructure/src/: lib.rs
crates/stg-proto/: Cargo.toml  build.rs
crates/stg-proto/proto/: stg_core.proto
crates/stg-proto/src/: lib.rs
crates/stg-server/: Cargo.toml
crates/stg-server/src/: main.rs
home/artchers/Nor/stg-ashland-core-backend/stg-backend/.local-bin/: cc
src/: App.tsx  data.ts
stg-backend/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md  SESSION_ARCHITECTURE.md  SIMULATION_ENGINE.md
stg-backend/crates/stg-api/src/grpc/: auth.rs  error.rs  handlers.rs  mod.rs  publisher.rs  streaming.rs  unary.rs
stg-backend/crates/stg-application/: Cargo.toml
stg-backend/crates/stg-application/src/: lib.rs  locale.rs  scheduler.rs  transaction.rs
stg-backend/crates/stg-domain/: Cargo.toml
stg-backend/crates/stg-domain/src/: lib.rs  locale.rs
stg-backend/crates/stg-infrastructure/: Cargo.toml
stg-backend/crates/stg-infrastructure/src/: lib.rs  locale.rs  observability.rs  session_repository.rs  tick_repository.rs  transaction_manager.rs  transition_repository.rs
stg-backend/crates/stg-infrastructure/tests/: session_tests.rs
stg-backend/crates/stg-proto/: Cargo.toml  build.rs
stg-backend/crates/stg-proto/proto/: stg_core.proto
stg-backend/crates/stg-proto/src/: lib.rs  stg.v1.rs
stg-backend/crates/stg-server/: Cargo.toml
stg-backend/crates/stg-server/src/: health.rs  main.rs
stg-backend/migrations/: 001_init.sql  002_energy.sql  003_outbox.sql  004_conversion.sql  005_indexes.sql  006_constraints.sql  007_versioning.sql  008_sessions.sql  009_simulation_engine.sql  20240716000000_create_outbox_events.sql
stg-backend/tests/: integration_test.rs
