[package]
name = "stg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.11"
prost = "0.12"
stg-proto = { path = "../stg-proto" }
stg-domain = { path = "../stg-domain" }
stg-application = { path = "../stg-application" }
stg-infrastructure = { path = "../stg-infrastructure" }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
async-trait = "0.1"
chrono = "0.4"
prost-types = "0.12"
