[package]
name = "stg-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
stg-domain = { path = "../stg-domain" }
stg-application = { path = "../stg-application" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1.37.0", features = ["rt", "time"] }
