[package]
name = "stg-application"
version = "0.1.0"
edition = "2021"

[dependencies]
stg-domain = { path = "../stg-domain" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.80"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["time", "sync"] }
tracing = "0.1"
