[package]
name = "stg-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
